# solution-1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  workspace.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/test_publisher/share/test_publisher/: package.sh
log/: latest_build
parc_robot/: CMakeLists.txt  package.xml
parc_robot_bringup/: CMakeLists.txt  LICENSE  package.xml
parc_robot_bringup/config/: controllers.yaml  gz_bridge.yaml  world1_params.yaml  world2_params.yaml  world3_params.yaml
parc_robot_bringup/launch/: task_launch.py  task_launch_ros2cont.py
parc_robot_bringup/rviz/: task1.rviz
parc_robot_bringup/scripts/: load_task_params.py
parc_robot_bringup/worlds/: world1.sdf  world2.sdf  world3.sdf
parc_robot_description/: CMakeLists.txt  package.xml
parc_robot_description/launch/: description_launch.py  robot_state_publisher_launch.py
parc_robot_description/rviz/: description.rviz
parc_robot_description/urdf/: attachment.xacro  enclosure.xacro  gps.xacro  imu.xacro  inertial_macros.xacro  parc_robot.xacro  parc_robot_gz_control.xacro  parc_robot_ros2_control.xacro  parc_robot_with_collisions.sdf  scout_wheel_type1.xacro  scout_wheel_type2.xacro  sensors.xacro  side_cameras.xacro  ydlidar.xacro  zed2.xacro
resources/: sample-submission-readme.md
solution/: package.xml  setup.py
solution/solution/: task_solution.py
test_publisher/: package.xml  setup.cfg  setup.py
test_publisher/test_publisher/: robot_publisher.py  robot_publisher_backup.py
