<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parc_robot_bringup</name>
  <version>0.0.0</version>
  <description>PARC robot bringup package</description>
  <maintainer email="noobinventor@tutamail.com">Chinedu Amadi</maintainer>
  <license file="LICENSE">GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>parc_robot_description</exec_depend>

  <depend>controller_manager</depend>
  <depend>rclpy</depend>
  <depend>pluginlib</depend>
  <depend>ros2_control</depend>
  <depend>robot_localization</depend>
  <depend>ros2_controllers</depend>
  <depend>gz_ros2_control</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>image_transport_plugins</depend>
  <depend>topic_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
